--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
 	"dependencies": {
-		"cors": "^2.8.5",
-		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
-		"firebase": "^9.13.0"
+		"firebase-admin": "^11.2.0"
 	},
 	"name": "nodejs-express-api-firebase",
 	"version": "1.0.0",
@@ -16,5 +14,8 @@
 	"author": "Jason Han (https://github.com/hiredtocode)",
 	"license": "ISC",
 	"description": "",
-	"type": "module"
+	"type": "module",
+	"devDependencies": {
+		"nodemon": "^2.0.16"
+	}
 }
